# ytmusic-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_windows_exe.py
ytmusic_sync/: __init__.py  cli.py  config.py  gui.py  scanner.py  tracker.py  uploader.py
ytmusic_sync/tests/: test_cli.py  test_config.py  test_gui.py  test_scanner.py  test_tracker.py  test_uploader.py
